tests/ui/parser/attribute/attr-dangling-in-mod.rs
fn main() {
}

<<<<<<< HEAD
#[foo = "bar"]

// ferrocene-annotations: fls_gvwd0kf72jt
// Attributes
=======
#[foo = "bar"] //~ ERROR expected item after attributes
>>>>>>> pull-upstream-temp--do-not-use-for-real-code
